B&L QA/objects/Account_Contract_Junction__c.object
<CustomObject>
    <description>To allow Contracts to be related to multiple Accounts - similar to Account/Contact Relationship</description>
    <fields>
        <fullName>AccountContractIDPair__c</fullName>
        <description>Used by Apex to lookup existing account ID Contact ID pairs</description>
        <formula>(Account__c &amp; Contract__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used by Apex to lookup existing account ID Contact ID pairs</inlineHelpText>
        <label>AccountContractIDPair</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountContractIdPairTxt__c</fullName>
        <description>Indexed field containing existing Account/Contract ID pairs</description>
        <externalId>true</externalId>
        <label>AccountContractIdPairTxt</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account to which Contract is related</description>
        <inlineHelpText>Account to which Contract is related</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account/Contract Relationships</relationshipLabel>
        <relationshipName>Account_Contract_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date_del__c</fullName>
        <formula>Contract__r.EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <formula>Contract__r.StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Account/Contract Relationships</relationshipLabel>
        <relationshipName>Account_Contract_Relationships</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ship_To_ID__c</fullName>
        <formula>Account__r.Ship_To_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To ID</label>
        <type>Text</type>
    </fields>
    <label>Account/Contract Relationship</label>
    <nameField>
        <displayFormat>ACR-{0000000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account/Contract Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>